2004-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Set stringstream in to_string fallback code to C locale
2004-10-31  Roger Leigh <rleigh@debian.org>
 debian/control.in:
  - postgresql-dev depends on pkg-config
 debian/rules:
  - Remove all examples that include internal headers
2004-10-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Warning: icursor_iterator constructors may now throw execptions
  - Made icursorstream keep track of its iterators
  - icursor_iterators no longer read data unless really needed
  - Made icursorstream/icursor_iterator "lazy," skipping over unread data
  - Fixed icursor_iterator equality comparison
  - Allow for generic icursor_iterator comparison, not just for end-of-stream
  - icursor_iterators should no longer get confused when mixing operations
2004-10-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.hxx:
  - Nothrow specs on destructors (Windows only).  Thanks reina_ga@hotmail 
 include/pqxx/result.hxx, test/test075.cxx, test/test082.cxx:
  - Full test coverage
 include/pqxx/cursor.hxx:
  - icursor_iterator::operator+= now thinks in strides, like operator++ etc.
  - Fixed icursor_iterator comparison operators
  - Fixed icursor_iterator freshness bookkeeping
  - Removed m_pos from icursor_iterator
  - Made icursor_iterator constructor taking istream_type explicit
  - Added adopted-cursor feature
  - Documented use with nontransactions and WITH HOLD
  - No longer marked experimental
  - Full test coverage
 src/util.cxx:
  - Missing <windows.h> include, thanks Stephan Schuetz
 test/test000.cxx:
  - Test signedness of cursor_base's prior() and backward_all()
 test/test084.cxx:
  - New
  - Test adopted cursor
  - Test icursor_iterator
 tools/makevcmak.pl:
  - Fixed typo, thanks Stephan Schuetz
2004-10-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
  - Fixed swap(): forgot to call superclass swap()
2004-10-25  Jeroen T. Vermeulen <jtv@xs4all.nl>